--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .Header {
-    color: #D2D5DD;
-    font-family: sans-serif;
-    font-size: 40px;
+    color: #d7ceb2;
+    font-size: 4vw;
+    letter-spacing: 1px;
     transition: 0.5s
       }
 
