--- a/my-app/src/components/Input/Input.css
+++ b/my-app/src/components/Input/Input.css
@@ -1,7 +1,7 @@
 ::placeholder {
-    color: #F5B700;
+    color: #a59e8c;
     opacity: 50%;
-    font-family: sans-serif;
+    font-family: inherit;
     font-size: 25px;
   }
 
@@ -12,9 +12,11 @@
     outline: transparent;
     border: none;
     background-color: transparent;
-    color: #F5B700;
-    font-family: sans-serif;
+    color: #d7ceb2;
+    font-family: inherit;
+    letter-spacing: 1px;
     font-size: 25px;
     padding-bottom: 1%;
-    border-bottom: 1px solid #bd8e01
+    border-bottom: 1px solid #a59e8c;
+    margin-left: 5%;
   }
